unpackaged/main/default/objects/AccountDrug__c/AccountDrug__c.object-meta.xml
<CustomObject>
    <description>#SAL-650 Account Drug custom object to store account drug related informations</description>
    <label>Account Drug</label>
    <nameField>
        <label>Account Drug Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Account Drugs</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>