unpackaged/main/default/objects/AccountDrug__c/fields/AccountId__c.field-meta.xml
<CustomField>
    <fullName>AccountId__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>#SAL-650 Account Lookup</description>
    <label>Account Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Drugs</relationshipLabel>
    <relationshipName>Account_Drugs</relationshipName>
    <type>Lookup</type>
</CustomField>