unpackaged/main/default/objects/AccountDrug__c/fields/AccountManager__c.field-meta.xml
<CustomField>
    <fullName>AccountManager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>#SAL-650 Account Manager</description>
    <label>Account Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Account_Drugs</relationshipName>
    <type>Lookup</type>
</CustomField>