unpackaged/main/default/objects/AccountDrug__c/fields/ApprovalDate__c.field-meta.xml
<CustomField>
    <fullName>ApprovalDate__c</fullName>
    <description>#SAL-650 Stores Approval Date value</description>
    <label>Approval Date</label>
    <type>Date</type>
</CustomField>