unpackaged/main/default/objects/AccountDrug__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>#SAL-650 Description</description>
    <label>Description</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>