unpackaged/main/default/objects/AccountDrug__c/fields/DevelopmentPhase__c.field-meta.xml
<CustomField>
    <fullName>DevelopmentPhase__c</fullName>
    <description>#SAL-650 Development Phase picklist</description>
    <label>Development Phase</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Abandoned - Approved</fullName>
            </value>
            <value>
                <fullName>Abandoned - Filed</fullName>
            </value>
            <value>
                <fullName>Abandoned - Phase I</fullName>
            </value>
            <value>
                <fullName>Abandoned - Phase II</fullName>
            </value>
            <value>
                <fullName>Abandoned - Phase III</fullName>
            </value>
            <value>
                <fullName>Abandoned - Pre-clinical</fullName>
            </value>
            <value>
                <fullName>Abandoned - Pre-filing (generics)</fullName>
            </value>
            <value>
                <fullName>Abandoned - Research project</fullName>
            </value>
            <value>
                <fullName>Abandoned - Unclassified</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Disposed - Approved</fullName>
            </value>
            <value>
                <fullName>Disposed - Filed</fullName>
            </value>
            <value>
                <fullName>Disposed - Marketed</fullName>
            </value>
            <value>
                <fullName>Disposed - Phase I</fullName>
            </value>
            <value>
                <fullName>Disposed - Phase II</fullName>
            </value>
            <value>
                <fullName>Disposed - Phase III</fullName>
            </value>
            <value>
                <fullName>Disposed - Pre-clinical</fullName>
            </value>
            <value>
                <fullName>Disposed - Pre-filing (generics)</fullName>
            </value>
            <value>
                <fullName>Disposed - Research project</fullName>
            </value>
            <value>
                <fullName>Disposed - Unclassified</fullName>
            </value>
            <value>
                <fullName>Filed</fullName>
            </value>
            <value>
                <fullName>Marketed</fullName>
            </value>
            <value>
                <fullName>Not in Development (USA)</fullName>
            </value>
            <value>
                <fullName>Phase I</fullName>
            </value>
            <value>
                <fullName>Phase II</fullName>
            </value>
            <value>
                <fullName>Phase III</fullName>
            </value>
            <value>
                <fullName>Pre-clinical</fullName>
            </value>
            <value>
                <fullName>Pre-filing (generics)</fullName>
            </value>
            <value>
                <fullName>Research project</fullName>
            </value>
            <value>
                <fullName>Suspended - Filed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>