unpackaged/main/default/objects/AccountDrug__c/fields/DrugSummary__c.field-meta.xml
<CustomField>
    <fullName>DrugSummary__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>#SAL-650 Drug Summary Lookup</description>
    <label>Drug Summary</label>
    <referenceTo>DrugSummary__c</referenceTo>
    <relationshipLabel>Account Drugs</relationshipLabel>
    <relationshipName>Account_Drugs</relationshipName>
    <type>Lookup</type>
</CustomField>