unpackaged/main/default/objects/AccountDrug__c/fields/DrugSummaryId__c.field-meta.xml
<CustomField>
    <fullName>DrugSummaryId__c</fullName>
    <description>#SAL-650 Drug Summary Id</description>
    <label>Drug Summary ID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>