unpackaged/main/default/objects/AccountDrug__c/fields/GenericName__c.field-meta.xml
<CustomField>
    <fullName>GenericName__c</fullName>
    <description>#SAL-650 Generic Name</description>
    <label>Generic Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>