unpackaged/main/default/objects/AccountDrug__c/fields/HighValueTarget__c.field-meta.xml
<CustomField>
    <fullName>HighValueTarget__c</fullName>
    <defaultValue>false</defaultValue>
    <description>#SAL-650 High Value Target</description>
    <label>High Value Target</label>
    <type>Checkbox</type>
</CustomField>