unpackaged/main/default/objects/AccountDrug__c/fields/LaunchDate__c.field-meta.xml
<CustomField>
    <fullName>LaunchDate__c</fullName>
    <description>#SAL-650 Launch Date</description>
    <label>Launch Date</label>
    <type>Date</type>
</CustomField>