unpackaged/main/default/objects/AccountDrug__c/fields/LifecycleCategory__c.field-meta.xml
<CustomField>
    <fullName>LifecycleCategory__c</fullName>
    <description>#SAL-650 Life Cycle Category</description>
    <label>Lifecycle Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Abandoned</fullName>
            </value>
            <value>
                <fullName>Approaching LOE</fullName>
            </value>
            <value>
                <fullName>Development</fullName>
            </value>
            <value>
                <fullName>Disposed</fullName>
            </value>
            <value>
                <fullName>Launch</fullName>
            </value>
            <value>
                <fullName>LOE</fullName>
            </value>
            <value>
                <fullName>Mature</fullName>
            </value>
            <value>
                <fullName>Mid-Life</fullName>
            </value>
            <value>
                <fullName>Suspended</fullName>
            </value>
            <value>
                <fullName>Transferred</fullName>
            </value>
            <value>
                <fullName>Unclassified</fullName>
            </value>
            <value>
                <fullName>Very Mature</fullName>
            </value>
            <value>
                <fullName>Withdrawn</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>