unpackaged/main/default/objects/AccountDrug__c/fields/LOEDate__c.field-meta.xml
<CustomField>
    <fullName>LOEDate__c</fullName>
    <description>#SAL-650 LOE Date</description>
    <label>LOE Date</label>
    <type>Date</type>
</CustomField>