unpackaged/main/default/objects/AccountDrug__c/fields/MDM_Benefit_Type__c.field-meta.xml
<CustomField>
    <fullName>MDM_Benefit_Type__c</fullName>
    <description>#SAL-650 Benefit Type values</description>
    <label>Benefit Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Medical</fullName>
            </value>
            <value>
                <fullName>Mixed</fullName>
            </value>
            <value>
                <fullName>Pharmacy</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>