unpackaged/main/default/objects/AccountDrug__c/fields/MDM_Company_ID__c.field-meta.xml
<CustomField>
    <fullName>MDM_Company_ID__c</fullName>
    <description>#SAL-650 MDM Company ID value</description>
    <label>Company ID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>