unpackaged/main/default/objects/AccountDrug__c/fields/MDM_Company_Sales_2021_USA__c.field-meta.xml
<CustomField>
    <fullName>MDM_Company_Sales_2021_USA__c</fullName>
    <description>#SAL-650 Company Sales 2021 (USA) values</description>
    <label>Company Sales 2021 (USA)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>