unpackaged/main/default/objects/AccountDrug__c/fields/MDM_Drug_Record_Name__c.field-meta.xml
<CustomField>
    <fullName>MDM_Drug_Record_Name__c</fullName>
    <description>#SAL-650 Drug Record Name</description>
    <label>Drug Record Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>