unpackaged/main/default/objects/AccountDrug__c/fields/MDM_Lead_Indication_Revenue__c.field-meta.xml
<CustomField>
    <fullName>MDM_Lead_Indication_Revenue__c</fullName>
    <description>#SAL-650 Lead Indication Revenue from MDM</description>
    <label>Lead Indication (Revenue)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>