unpackaged/main/default/objects/AccountDrug__c/fields/MDM_Master_Record_ID__c.field-meta.xml
<CustomField>
    <fullName>MDM_Master_Record_ID__c</fullName>
    <description>#SAL-650 MDM Master Record Id</description>
    <externalId>true</externalId>
    <label>Master Record ID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>