unpackaged/main/default/objects/AccountDrug__c/fields/MDM_Master_Record_Name__c.field-meta.xml
<CustomField>
    <fullName>MDM_Master_Record_Name__c</fullName>
    <description>#SAL-650 MDM Master Record Name</description>
    <label>Master Record Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>