unpackaged/main/default/objects/AccountDrug__c/fields/NDADate__c.field-meta.xml
<CustomField>
    <fullName>NDADate__c</fullName>
    <description>#SAL-650 NDA Date</description>
    <label>NDA Date</label>
    <type>Date</type>
</CustomField>