unpackaged/main/default/objects/AccountDrug__c/fields/NetSuiteCategoryId__c.field-meta.xml
<CustomField>
    <fullName>NetSuiteCategoryId__c</fullName>
    <formula>CASE( RecordType.Name , &#39;Brand&#39;,&#39;1&#39;, &#39;Pharma Manufacturer&#39;,&#39;1&#39;, &#39;Payer&#39;,&#39;2&#39;, &#39;Payer Parent&#39;,&#39;2&#39;, &#39;&#39;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>NetSuite Category ID</label>
    <type>Text</type>
</CustomField>