unpackaged/main/default/objects/AccountDrug__c/fields/Novelty__c.field-meta.xml
<CustomField>
    <fullName>Novelty__c</fullName>
    <description>#SAL-650 Novelty field values</description>
    <label>Novelty</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Biosimilars</fullName>
            </value>
            <value>
                <fullName>Generics</fullName>
            </value>
            <value>
                <fullName>NDA</fullName>
            </value>
            <value>
                <fullName>New Derivative</fullName>
            </value>
            <value>
                <fullName>New molecular entity</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>