unpackaged/main/default/objects/AccountDrug__c/fields/OtherBrandNames__c.field-meta.xml
<CustomField>
    <fullName>OtherBrandNames__c</fullName>
    <description>#SAL-650 Other Brand Names</description>
    <label>Other Brand Names</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>