unpackaged/main/default/objects/AccountDrug__c/fields/PatentExpiryDate__c.field-meta.xml
<CustomField>
    <fullName>PatentExpiryDate__c</fullName>
    <description>#SAL-650 Patent Expiry Date</description>
    <label>Patent Expiry Date</label>
    <type>Date</type>
</CustomField>