unpackaged/main/default/objects/AccountDrug__c/fields/PDUFADate__c.field-meta.xml
<CustomField>
    <fullName>PDUFADate__c</fullName>
    <description>#SAL-650 PDUFA Date</description>
    <label>PDUFA Date</label>
    <type>Date</type>
</CustomField>