unpackaged/main/default/objects/AccountDrug__c/fields/ResearchCodes__c.field-meta.xml
<CustomField>
    <fullName>ResearchCodes__c</fullName>
    <description>#SAL-650 Research Codes</description>
    <label>Research Codes</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>