unpackaged/main/default/objects/AccountDrug__c/fields/ROABMTUS__c.field-meta.xml
<CustomField>
    <fullName>ROABMTUS__c</fullName>
    <description>#SAL-650 ROA (BMT - US)</description>
    <label>ROA (BMT - US)</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Hemoperfusion</fullName>
            </value>
            <value>
                <fullName>Inhaled</fullName>
            </value>
            <value>
                <fullName>Instillation</fullName>
            </value>
            <value>
                <fullName>Intra-amniotic</fullName>
            </value>
            <value>
                <fullName>Intraarterial</fullName>
            </value>
            <value>
                <fullName>Intraarticular</fullName>
            </value>
            <value>
                <fullName>Intracavitary</fullName>
            </value>
            <value>
                <fullName>Intracerebral/cerebroventricular</fullName>
            </value>
            <value>
                <fullName>Intra-Cisterna Magna (ICM) Injection</fullName>
            </value>
            <value>
                <fullName>Intracochlear</fullName>
            </value>
            <value>
                <fullName>Intradermal</fullName>
            </value>
            <value>
                <fullName>Intradiscal</fullName>
            </value>
            <value>
                <fullName>Intraintestinal</fullName>
            </value>
            <value>
                <fullName>Intramuscular (IM)</fullName>
            </value>
            <value>
                <fullName>Intranasal</fullName>
            </value>
            <value>
                <fullName>Intranodal</fullName>
            </value>
            <value>
                <fullName>Intraocular/Subretinal/Subconjunctival</fullName>
            </value>
            <value>
                <fullName>Intrathecal</fullName>
            </value>
            <value>
                <fullName>Intratracheal</fullName>
            </value>
            <value>
                <fullName>Intratumoral</fullName>
            </value>
            <value>
                <fullName>Intratympanic</fullName>
            </value>
            <value>
                <fullName>Intraurethral</fullName>
            </value>
            <value>
                <fullName>Intrauterine</fullName>
            </value>
            <value>
                <fullName>Intravaginal</fullName>
            </value>
            <value>
                <fullName>Intravenous (IV)</fullName>
            </value>
            <value>
                <fullName>Intravesical</fullName>
            </value>
            <value>
                <fullName>Intravitreal</fullName>
            </value>
            <value>
                <fullName>Oral (PO)</fullName>
            </value>
            <value>
                <fullName>Percutaneous Catheter/Injection</fullName>
            </value>
            <value>
                <fullName>Rectal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>