unpackaged/main/default/objects/AccountDrug__c/fields/ROAEPWW__c.field-meta.xml
<CustomField>
    <fullName>ROAEPWW__c</fullName>
    <description>#SAL-650 ROA (EP - WW)</description>
    <label>ROA (EP - WW)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Implant</fullName>
            </value>
            <value>
                <fullName>Inhalation</fullName>
            </value>
            <value>
                <fullName>Injection</fullName>
            </value>
            <value>
                <fullName>In review</fullName>
            </value>
            <value>
                <fullName>Intranasal</fullName>
            </value>
            <value>
                <fullName>Intraurethral</fullName>
            </value>
            <value>
                <fullName>Ophthalmic</fullName>
            </value>
            <value>
                <fullName>Oral</fullName>
            </value>
            <value>
                <fullName>Otic</fullName>
            </value>
            <value>
                <fullName>Topical</fullName>
            </value>
            <value>
                <fullName>Transdermal</fullName>
            </value>
            <value>
                <fullName>Transmucosal</fullName>
            </value>
            <value>
                <fullName>Undisclosed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>