unpackaged/main/default/objects/AccountDrug__c/fields/Specialty__c.field-meta.xml
<CustomField>
    <fullName>Specialty__c</fullName>
    <description>#SAL-650 Specialty</description>
    <label>Specialty</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Likely</fullName>
            </value>
            <value>
                <fullName>Not Likely</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Specialty Elite</fullName>
            </value>
            <value>
                <fullName>Specialty</fullName>
            </value>
            <value>
                <fullName>Specialty Lite</fullName>
            </value>
            <value>
                <fullName>Not Specialty</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>