unpackaged/main/default/objects/AccountDrug__c/fields/Technology__c.field-meta.xml
<CustomField>
    <fullName>Technology__c</fullName>
    <description>#SAL-650 Technology</description>
    <label>Technology</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cell therapy</fullName>
            </value>
            <value>
                <fullName>DNA &amp; RNA therapeutics</fullName>
            </value>
            <value>
                <fullName>Gene therapy</fullName>
            </value>
            <value>
                <fullName>Gene-Modified Cell Therapy</fullName>
            </value>
            <value>
                <fullName>Genome Editing</fullName>
            </value>
            <value>
                <fullName>In vivo diagnostics</fullName>
            </value>
            <value>
                <fullName>Miscellaneous</fullName>
            </value>
            <value>
                <fullName>Monoclonal antibody</fullName>
            </value>
            <value>
                <fullName>Oncolytic Virus</fullName>
            </value>
            <value>
                <fullName>Other biotechnology product</fullName>
            </value>
            <value>
                <fullName>Plant extract</fullName>
            </value>
            <value>
                <fullName>Plasma-derived therapy</fullName>
            </value>
            <value>
                <fullName>Protein &amp; peptide therapeutics</fullName>
            </value>
            <value>
                <fullName>Recombinant antibody</fullName>
            </value>
            <value>
                <fullName>Small molecule chemistry</fullName>
            </value>
            <value>
                <fullName>Transgenic product</fullName>
            </value>
            <value>
                <fullName>Vaccine</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>