unpackaged/main/default/objects/AccountDrug__c/fields/TherapeuticCategory__c.field-meta.xml
<CustomField>
    <fullName>TherapeuticCategory__c</fullName>
    <description>#SAL-650 Therapeutic Category</description>
    <label>Therapeutic Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Blood</fullName>
            </value>
            <value>
                <fullName>Cardiovascular</fullName>
            </value>
            <value>
                <fullName>Central Nervous System</fullName>
            </value>
            <value>
                <fullName>Dermatology</fullName>
            </value>
            <value>
                <fullName>Endocrine</fullName>
            </value>
            <value>
                <fullName>Gastro-Intestinal</fullName>
            </value>
            <value>
                <fullName>Genito-Urinary</fullName>
            </value>
            <value>
                <fullName>Immunomodulators</fullName>
            </value>
            <value>
                <fullName>Musculoskeletal</fullName>
            </value>
            <value>
                <fullName>Oncology</fullName>
            </value>
            <value>
                <fullName>Respiratory</fullName>
            </value>
            <value>
                <fullName>Sensory Organs</fullName>
            </value>
            <value>
                <fullName>Systemic Anti-infectives</fullName>
            </value>
            <value>
                <fullName>Various</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>