unpackaged/main/default/objects/AccountDrug__c/fields/TherapeuticSubcategory__c.field-meta.xml
<CustomField>
    <fullName>TherapeuticSubcategory__c</fullName>
    <description>#SAL-650 Therapeutic Subcategory</description>
    <label>Therapeutic Subcategory</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ACE inhibitors</fullName>
            </value>
            <value>
                <fullName>Alkaloids</fullName>
            </value>
            <value>
                <fullName>Alkylating agents</fullName>
            </value>
            <value>
                <fullName>Anaesthetics</fullName>
            </value>
            <value>
                <fullName>Angiotensin II antagonists</fullName>
            </value>
            <value>
                <fullName>Antacids &amp; anti-ulcerants</fullName>
            </value>
            <value>
                <fullName>Anti-acne preparations</fullName>
            </value>
            <value>
                <fullName>Anti-anaemics</fullName>
            </value>
            <value>
                <fullName>Anti-angiogenics</fullName>
            </value>
            <value>
                <fullName>Anti-bacterials</fullName>
            </value>
            <value>
                <fullName>Anti-cholinergics</fullName>
            </value>
            <value>
                <fullName>Anti-coagulants</fullName>
            </value>
            <value>
                <fullName>Anti-depressants</fullName>
            </value>
            <value>
                <fullName>Anti-diabetics</fullName>
            </value>
            <value>
                <fullName>Anti-diarrhoeals</fullName>
            </value>
            <value>
                <fullName>Anti-emetics</fullName>
            </value>
            <value>
                <fullName>Anti-epileptics</fullName>
            </value>
            <value>
                <fullName>Anti-fibrinolytics</fullName>
            </value>
            <value>
                <fullName>Anti-fungals</fullName>
            </value>
            <value>
                <fullName>Anti-gout preparations</fullName>
            </value>
            <value>
                <fullName>Anti-histamines</fullName>
            </value>
            <value>
                <fullName>Anti-hyperlipidaemics</fullName>
            </value>
            <value>
                <fullName>Anti-leukotrienes</fullName>
            </value>
            <value>
                <fullName>Anti-metabolites</fullName>
            </value>
            <value>
                <fullName>Anti-migraine preparations</fullName>
            </value>
            <value>
                <fullName>Anti-obesity agents</fullName>
            </value>
            <value>
                <fullName>Anti-parasitics</fullName>
            </value>
            <value>
                <fullName>Anti-Parkinson&#39;s agents</fullName>
            </value>
            <value>
                <fullName>Anti-psoriasis agents</fullName>
            </value>
            <value>
                <fullName>Anti-psychotics</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>