unpackaged/main/default/objects/AccountDrug__c/fields/UnifiedStatus__c.field-meta.xml
<CustomField>
    <fullName>UnifiedStatus__c</fullName>
    <description>#SAL-650 Unified Status</description>
    <label>Unified Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Abandoned - Approved</fullName>
            </value>
            <value>
                <fullName>Abandoned - Filed</fullName>
            </value>
            <value>
                <fullName>Abandoned - Phase I</fullName>
            </value>
            <value>
                <fullName>Abandoned - Phase II</fullName>
            </value>
            <value>
                <fullName>Abandoned - Phase III</fullName>
            </value>
            <value>
                <fullName>Abandoned - Pre-clinical</fullName>
            </value>
            <value>
                <fullName>Abandoned - Pre-filing (generics)</fullName>
            </value>
            <value>
                <fullName>Abandoned - Research project</fullName>
            </value>
            <value>
                <fullName>Abandoned - Unclassified</fullName>
            </value>
            <value>
                <fullName>Development - Filed</fullName>
            </value>
            <value>
                <fullName>Development - Not in Development (USA)</fullName>
            </value>
            <value>
                <fullName>Development - Phase I</fullName>
            </value>
            <value>
                <fullName>Development - Phase II</fullName>
            </value>
            <value>
                <fullName>Development - Phase III</fullName>
            </value>
            <value>
                <fullName>Development - Pre-clinical</fullName>
            </value>
            <value>
                <fullName>Development - Pre-filing (generics)</fullName>
            </value>
            <value>
                <fullName>Development - Research project</fullName>
            </value>
            <value>
                <fullName>Disposed - Approved</fullName>
            </value>
            <value>
                <fullName>Disposed - Filed</fullName>
            </value>
            <value>
                <fullName>Disposed - Marketed</fullName>
            </value>
            <value>
                <fullName>Disposed - Phase I</fullName>
            </value>
            <value>
                <fullName>Disposed - Phase II</fullName>
            </value>
            <value>
                <fullName>Disposed - Phase III</fullName>
            </value>
            <value>
                <fullName>Disposed - Pre-clinical</fullName>
            </value>
            <value>
                <fullName>Disposed - Pre-filing (generics)</fullName>
            </value>
            <value>
                <fullName>Disposed - Research project</fullName>
            </value>
            <value>
                <fullName>Disposed - Unclassified</fullName>
            </value>
            <value>
                <fullName>Marketed - Approaching LOE</fullName>
            </value>
            <value>
                <fullName>Marketed - Launch</fullName>
            </value>
            <value>
                <fullName>Marketed - LOE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>