unpackaged/main/default/objects/AccountDrug__c/recordTypes/BioPharma.recordType-meta.xml
<RecordType>
    <fullName>BioPharma</fullName>
    <active>true</active>
    <description>BioPharma record type for Account Drugs</description>
    <label>BioPharma</label>
</RecordType>